...
      android:id="@+id/radio_fail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/trial_fail" />
  </RadioGroup>
  <EditText
    android:id="@+id/et_trial_entry_number"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:ems="10"
    android:importantForAutofill="no"
    android:inputType="number"
...
    android:layout_margin="16dp"
    android:text="@string/trial_submit_trial"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/ll_new_trial_layout" />
  <Button
    android:id="@+id/btn_new_trial_reg_barcode"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/trial_register_barcode"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/btn_new_trial_submit" />
  <Button
    android:id="@+id/btn_new_trial_create_qrcode"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="Create QR Code"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
...
