<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <com.budiyev.android.codescanner.CodeScannerView
    android:id="@+id/scanner_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:autoFocusButtonColor="@android:color/white"
    app:autoFocusButtonVisible="true"
    app:flashButtonColor="@android:color/white"
    app:flashButtonVisible="true"
    app:frameColor="@android:color/white"
    app:frameCornersSize="50dp"
    app:frameCornersRadius="0dp"
    app:frameAspectRatioWidth="1"
    app:frameAspectRatioHeight="1"
    app:frameSize="0.75"
    app:frameThickness="2dp"
    app:maskColor="#77000000" />
</FrameLayout>
