<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/search_experiments"
    android:enabled="true"
    android:icon="@drawable/ic_baseline_search"
    android:title="@string/menu_search"
    app:actionViewClass="androidx.appcompat.widget.SearchView"
    app:showAsAction="collapseActionView|ifRoom" />
  <item
    android:id="@+id/show_profile"
    android:enabled="true"
    android:icon="@drawable/ic_baseline_person"
    android:title="@string/menu_profile"
    app:showAsAction="ifRoom" />
    <item
      android:id="@+id/scan_code_menu_button"
      android:enabled="true"
      android:icon="@drawable/ic_baseline_qr_code_scanner_24"
      android:title="@string/scan_code_menu_button_title"
      app:showAsAction="ifRoom" />
</menu>