<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/edit_profile_button"
    android:icon="@drawable/ic_baseline_edit"
    android:title="TODO"
    android:visible="true"
    app:showAsAction="ifRoom" />

  <item
    android:id="@+id/edit_confirm_button"
    android:icon="@drawable/ic_baseline_check"
    android:title="CHECK"
    android:visible="false"
    app:showAsAction="ifRoom" />

</menu>